--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "test": "node specRunner.js"
   },
   "author": "Kristy Lam",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^5.3.0"
+  }
 }
